--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,13 @@
 {
   "command": {
     "bootstrap": {
-      "npmClientArgs": ["--no-package-lock"]
+      "npmClientArgs": [
+        "--no-package-lock"
+      ]
     }
   },
   "packages": [
     "packages/*/*"
   ],
-  "version": "5.1.0"
+  "version": "6.0.0"
 }
