--- a/packages/components/psammead-navigation/package.json
+++ b/packages/components/psammead-navigation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bbc/psammead-navigation",
-  "version": "2.1.1",
+  "version": "6.0.0",
   "description": "A navigation bar to use on index pages",
   "main": "dist/index.js",
   "module": "esm/index.js",
@@ -19,22 +19,22 @@
   },
   "homepage": "https://github.com/bbc/psammead/blob/latest/packages/components/psammead-navigation/README.md",
   "dependencies": {
-    "@bbc/gel-foundations": "^3.0.3",
-    "@bbc/psammead-styles": "^1.2.0",
-    "@bbc/psammead-visually-hidden-text": "^1.0.7"
+    "@bbc/gel-foundations": "^6.0.0",
+    "@bbc/psammead-styles": "^6.0.0",
+    "@bbc/psammead-visually-hidden-text": "^6.0.0"
   },
   "devDependencies": {
-    "@bbc/psammead-assets": "^1.0.6",
-    "@bbc/psammead-brand": "^4.1.12",
-    "@bbc/psammead-storybook-helpers": "^3.1.3",
-    "@bbc/psammead-test-helpers": "^1.0.2",
+    "@bbc/psammead-assets": "^6.0.0",
+    "@bbc/psammead-brand": "^6.0.0",
+    "@bbc/psammead-storybook-helpers": "^6.0.0",
+    "@bbc/psammead-test-helpers": "^6.0.0",
     "react": "^16.8.6",
     "styled-components": "^4.3.2"
   },
   "peerDependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "styled-components": "^4.3.2",
-    "prop-types": "^15.7.2"
+    "styled-components": "^4.3.2"
   },
   "keywords": [
     "bbc",
