--- a/packages/components/psammead-story-promo-list/package.json
+++ b/packages/components/psammead-story-promo-list/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bbc/psammead-story-promo-list",
-  "version": "1.1.1",
+  "version": "6.0.0",
   "main": "dist/index.js",
   "module": "esm/index.js",
   "sideEffects": false,
@@ -19,22 +19,22 @@
   },
   "homepage": "https://github.com/bbc/psammead/blob/latest/packages/components/psammead-story-promo-list/README.md",
   "dependencies": {
-    "@bbc/gel-foundations": "^3.0.3",
-    "@bbc/psammead-styles": "^1.2.0"
+    "@bbc/gel-foundations": "^6.0.0",
+    "@bbc/psammead-styles": "^6.0.0"
   },
   "devDependencies": {
-    "@bbc/psammead-image": "^1.0.6",
-    "@bbc/psammead-storybook-helpers": "^3.1.3",
-    "@bbc/psammead-story-promo": "^2.0.3",
-    "@bbc/psammead-test-helpers": "^1.0.2",
-    "@bbc/psammead-timestamp": "^2.0.4",
+    "@bbc/psammead-image": "^6.0.0",
+    "@bbc/psammead-story-promo": "^6.0.0",
+    "@bbc/psammead-storybook-helpers": "^6.0.0",
+    "@bbc/psammead-test-helpers": "^6.0.0",
+    "@bbc/psammead-timestamp": "^6.0.0",
     "react": "^16.8.6",
     "styled-components": "^4.3.2"
   },
   "peerDependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "styled-components": "^4.3.2",
-    "prop-types": "^15.7.2"
+    "styled-components": "^4.3.2"
   },
   "keywords": [
     "bbc",
