--- a/packages/components/psammead-timestamp/package.json
+++ b/packages/components/psammead-timestamp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bbc/psammead-timestamp",
-  "version": "2.1.1",
+  "version": "6.0.0",
   "main": "dist/index.js",
   "module": "esm/index.js",
   "sideEffects": false,
@@ -19,12 +19,12 @@
   },
   "homepage": "https://github.com/bbc/psammead/blob/latest/packages/components/psammead-timestamp/README.md",
   "dependencies": {
-    "@bbc/psammead-styles": "^1.2.0",
-    "@bbc/gel-foundations": "^3.0.3"
+    "@bbc/gel-foundations": "^6.0.0",
+    "@bbc/psammead-styles": "^6.0.0"
   },
   "devDependencies": {
-    "@bbc/psammead-storybook-helpers": "^3.1.3",
-    "@bbc/psammead-test-helpers": "^1.0.2",
+    "@bbc/psammead-storybook-helpers": "^6.0.0",
+    "@bbc/psammead-test-helpers": "^6.0.0",
     "styled-components": "^4.3.2"
   },
   "peerDependencies": {
